fix: remove flicker animation

--- a/themes/spencer.css
+++ b/themes/spencer.css
@@ -110,8 +110,6 @@ a.item:hover {
 
 .loading-label {
   text-align: center;
-  -webkit-animation: pulsate-bck 0.5s ease-in-out infinite both;
-  animation: pulsate-bck 0.5s ease-in-out infinite both;
 }
 
 .fade-in-bottom {
@@ -173,35 +171,5 @@ a.item:hover {
     -webkit-transform: translateZ(-80px);
     transform: translateZ(-80px);
     opacity: 0;
-  }
-}
-
-@-webkit-keyframes pulsate-bck {
-  0% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-  50% {
-    -webkit-transform: scale(0.9);
-    transform: scale(0.9);
-  }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-}
-
-@keyframes pulsate-bck {
-  0% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-  50% {
-    -webkit-transform: scale(0.9);
-    transform: scale(0.9);
-  }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
   }
 }
